--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CazarPatos.Personalizado">
         <activity
+            android:name=".RankingActivity" android:parentActivityName=".MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -21,8 +25,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity" android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
             android:exported="false" />
     </application>
+
 
 </manifest>
